--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="head">
         <div class="mainbox" onclick="openfunction()">&#9776;open
         </div>
-        <div class="logo">Mobile Repearing</div>
+        <div class="logo">Mobile Repairing</div>
       </div>
     <div class="sidebar" id="menu">
         <a href=""Home></a>
